# freqsearch

./: .gitignore  CLAUDE.md  Makefile
configs/: development.yaml
configs/freqtrade/: base_config.json
docker/: docker-compose.yml
docker/freqtrade/: Dockerfile  validate_strategy.py
docker/go-backend/: Dockerfile
docker/python-agent/: Dockerfile
frontend/: .env.example  README.md  SCOUT_LIST_IMPLEMENTATION.md  SETUP_COMPLETE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: axios.ts
frontend/src/components/charts/: DrawdownChart.tsx  MetricsComparison.tsx  ProfitCurve.tsx  index.ts
frontend/src/pages/dashboard/: AgentStatus.tsx  CODE_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  LAYOUT_REFERENCE.txt  OptimizationCard.tsx  PerformanceChart.tsx  QueueStats.tsx  README.md  components.ts  index.tsx
frontend/src/providers/: IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  QUICK_REFERENCE.md  README.md  dataProvider.ts  index.ts  liveProvider.test.ts  liveProvider.ts  types.ts  useLiveUpdates.ts
frontend/src/providers/examples/: BacktestTracker.tsx  DataProviderUsage.tsx  OptimizationMonitor.tsx
frontend/src/types/: api.ts
go-backend/: .air.toml  IMPLEMENTATION_SUMMARY.md  Makefile  PLAN_PHASE3_PYTHON_AGENTS.md  go.mod  go.sum
go-backend/cmd/server/: main.go
go-backend/configs/freqtrade/: base_config.json
go-backend/internal/config/: config.go  loader.go  validate.go
go-backend/internal/db/: postgres.go
go-backend/internal/docker/: config_builder.go  docker_manager.go  manager.go
go-backend/internal/domain/: backtest.go  enums.go  errors.go  optimization.go  scout.go  strategy.go
go-backend/internal/events/: publisher.go  subscriber.go  subscriber_test.go  types.go
go-backend/internal/parser/: result_parser.go
go-backend/internal/scheduler/: INTEGRATION_EXAMPLE.md  SCOUT_SCHEDULER_README.md  scheduler.go  scout_scheduler.go  scout_scheduler_test.go  worker.go
go-backend/web/: embed.go
proto/freqsearch/v1/: backtest.proto  common.proto  freqsearch.proto  strategy.proto
python-agent/: Makefile  pyproject.toml
python-agent/src/freqsearch/: __init__.py  config.py  main.py
python-agent/src/freqsearch/grpc_client/pb/: __init__.py
python-agent/src/freqsearch/grpc_client/pb/freqsearch/v1/: backtest_pb2.py  common_pb2.py  common_pb2_grpc.py  freqsearch_pb2_grpc.py  strategy_pb2.py  strategy_pb2.pyi  strategy_pb2_grpc.py
python-agents/: .env.example  Dockerfile  pyproject.toml
python-agents/examples/: orchestrator_example.py
python-agents/src/freqsearch_agents/: __init__.py  config.py  main.py
python-agents/src/freqsearch_agents/agents/: __init__.py  base.py
python-agents/src/freqsearch_agents/agents/analyst/: __init__.py  agent.py  nodes.py  prompts.py
python-agents/src/freqsearch_agents/agents/engineer/: __init__.py  agent.py  nodes.py  prompts.py
python-agents/src/freqsearch_agents/agents/orchestrator/: __init__.py  agent.py  context.py  graph.py  iteration_nodes.py  nodes.py  runner.py
python-agents/src/freqsearch_agents/agents/scout/: __init__.py  agent.py  nodes.py
python-agents/src/freqsearch_agents/core/: __init__.py  llm.py  messaging.py  state.py
python-agents/src/freqsearch_agents/grpc_client/: __init__.py  client.py
python-agents/src/freqsearch_agents/grpc_client/pb/: __init__.py
python-agents/src/freqsearch_agents/grpc_client/pb/freqsearch/v1/: backtest_pb2.pyi  backtest_pb2_grpc.py  common_pb2.pyi  common_pb2_grpc.py  freqsearch_pb2.py  freqsearch_pb2.pyi  freqsearch_pb2_grpc.py  strategy_pb2.py  strategy_pb2.pyi  strategy_pb2_grpc.py
python-agents/src/freqsearch_agents/schemas/: __init__.py  diagnosis.py  events.py  strategy.py
python-agents/src/freqsearch_agents/tools/: __init__.py
python-agents/src/freqsearch_agents/tools/analysis/: __init__.py  metrics.py
python-agents/src/freqsearch_agents/tools/code/: __init__.py  parser.py  simhash.py
python-agents/src/freqsearch_agents/tools/sources/: __init__.py  base.py  stratninja.py
python-agents/tests/: __init__.py  conftest.py
python-agents/tests/integration/: __init__.py  conftest.py  test_e2e_pipeline.py
python-agents/tests/unit/: test_code_parser.py  test_event_id.py  test_iteration_limit.py  test_metrics.py  test_simhash.py
python-agents/tests/unit/agents/: test_orchestrator.py
scripts/: generate_proto.sh
(+57 files in other folders)
