[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freqsearch-agent"
version = "0.1.0"
description = "AI-powered Freqtrade strategy optimization agent"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "saltfish" }
]
keywords = ["freqtrade", "trading", "ai", "optimization", "llm", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # gRPC
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.28.0",

    # LangChain & LangGraph
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",

    # RabbitMQ
    "aio-pika>=9.4.0",

    # Database (for retrieval queries)
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",

    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",

    # Code validation
    "astroid>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

ollama = [
    "langchain-ollama>=0.2.0",
]

[project.scripts]
freqsearch-agent = "freqsearch.main:main"

[project.urls]
Repository = "https://github.com/saltfish/freqsearch"

[tool.hatch.build.targets.wheel]
packages = ["src/freqsearch"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["freqsearch"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "aio_pika.*",
    "langchain.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
