[project]
name = "freqsearch-agents"
version = "0.1.0"
description = "AI Agents for FreqSearch - Strategy Discovery, Engineering, and Analysis"
authors = [{ name = "saltfish" }]
requires-python = ">=3.11"
dependencies = [
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",

    # OpenAI
    "openai>=1.50.0",

    # Database
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.0",

    # Message Queue
    "aio-pika>=9.4.0",

    # gRPC
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",

    # Web scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # Code analysis
    "simhash>=2.1.0",

    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
freqsearch-agents = "freqsearch_agents.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freqsearch_agents"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
